RESOLVED FIXED267262
REGRESSION (268251@main): 2D contexts fail after GPUP IOSurface limits have been exceeded
https://bugs.webkit.org/show_bug.cgi?id=267262
Summary REGRESSION (268251@main): 2D contexts fail after GPUP IOSurface limits have b...
Kimmo Kinnunen
Reported 2024-01-09 00:09:40 PST
REGRESSION (268251@main): 2D contexts fail after GPUP IOSurface limits have been exceeded
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-09 00:10:48 PST
Kimmo Kinnunen
Comment 2 2024-01-09 00:31:04 PST
EWS
Comment 3 2024-01-10 23:16:16 PST
Committed 272892@main (074ad42e866f): <https://commits.webkit.org/272892@main> Reviewed commits have been landed. Closing PR #22539 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.