Cherry-pick 074ad42e866f. rdar://120695232

REGRESSION (268251@main): 2D contexts fail after GPUP IOSurface limits have been exceeded
    https://bugs.webkit.org/show_bug.cgi?id=267262
    rdar://120695232

    Reviewed by Matt Woodrow.

    IOSurfaces fail to allocate when GPUP has too many of them. The commit
    268251@main removed the fallback for RemoteImageBuffer allocations,
    where Accelerated buffers would fall back to normal Unaccelerated
    buffers. Instead, the idea was to treat exceeding IOSurface limits as
    OOM situation. This would be done to prepare being able to create the
    specific Backend instance at RemoteImageBufferProxy instantiation time.

    This would break existing content that would leak thousands of 2d
    contexts. The content could still work with the fallback in place.

    Reimplement the fallback to Unaccelerated.

    * LayoutTests/fast/canvas/2d.context.many.small-expected.html: Added.
    * LayoutTests/fast/canvas/2d.context.many.small.html: Added.
    * LayoutTests/fast/canvas/image-buffer-backend-variants-expected.txt:
    * LayoutTests/fast/canvas/image-buffer-backend-variants.html:
    * Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
    (WebKit::allocateImageBufferInternal):
    * Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp:
    (WebKit::RemoteImageBufferProxy::didCreateBackend):

    Canonical link: https://commits.webkit.org/272892@main

Canonical link: https://commits.webkit.org/272448.236@safari-7618-branch